--- a/style.css
+++ b/style.css
@@ -8,6 +8,8 @@
 }
 
 .containerluar {
+  z-index: 10;
+  top: 0;
   position: sticky;
   width: 100%;
   display: flex;
@@ -74,14 +76,22 @@ span {
 }
 
 .home {
+  position: relative;
   width: 100%;
   height: 100vh;
-  background-color: white;
   display: flex;
   justify-content: center;
   align-items: center;
   gap: 7em;
   padding: 70px 12% 0;
+}
+.homebackground {
+  z-index: -1;
+  position: absolute;
+  width: 100%;
+  height: 1000px;
+  object-fit: cover;
+  object-position: 40% 10%;
 }
 
 .home-content {
@@ -89,12 +99,15 @@ span {
 }
 .home-content h3 {
   font-size: 42px;
+  color: white;
 }
 .home-content h1 {
+  color: white;
   font-size: 6;
   line-height: 1.2;
 }
 .home-content p {
+  color: white;
   font-size: 18px;
   margin: 25px 0 30px;
 }
@@ -105,7 +118,7 @@ span {
 }
 .btn-1 {
   padding: 15px 28px;
-  background-color: black;
+  background-color: orangered;
   color: white;
   border: 2px solid transparent;
   border-radius: 8px;
@@ -137,6 +150,7 @@ span {
   color: orangered;
 }
 .imgbox {
+  width: 150px;
   position: relative;
 }
 .imgbox img {
@@ -155,14 +169,21 @@ span {
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
-  background-color: rgb(39, 38, 38);
+}
+.backgroundcontainer {
+  z-index: -1;
+  position: absolute;
+  width: 100%;
+  height: 1000px;
+  object-fit: cover;
+  object-position: 40% 10%;
 }
 .experience1 {
   font-size: 19px;
   text-transform: capitalize;
-  color: orangered;
+  color: rgb(250, 250, 246);
 }
-.imgbox1 {
+.imgbox {
   position: relative;
 }
 .imgbox1 img {
@@ -176,15 +197,24 @@ span {
 .home1 {
   width: 100%;
   height: 100vh;
-  background-color: white;
+
   display: flex;
   justify-content: center;
   align-items: center;
   gap: 7em;
   padding: 70px 12% 0;
 }
+.backgroundskill {
+  z-index: -1;
+  position: absolute;
+  width: 100%;
+  height: 1000px;
+  object-fit: cover;
+  object-position: 40% 10%;
+}
 
 .home-content1 {
+  color: white;
   width: 1000px;
 }
 .home-content1 h3 {
@@ -198,7 +228,7 @@ span {
   font-size: 18px;
   margin: 25px 0 30px;
 }
-.imgbox2 {
+.imgbox {
   position: relative;
 }
 .imgbox2 img {
@@ -211,7 +241,7 @@ span {
 }
 .contact-form h2 {
   text-align: center;
-  margin-top: 3em;
+  margin-top: 5em;
   margin-bottom: 1em;
   font-size: 36px;
 }
